--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,7 +27,9 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/components/layout"
+    "src/components/layout",
+    "src/components/forms",
+    "src/data/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
