--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
+    "prettier-plugin-merge": "^0.7.2",
     "qs": "^6.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -27,12 +28,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/qs": "^6.9.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-classnames": "^0.7.5",
