--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,20 @@
     "format:check": "prettier --check '**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.23",
+    "@langchain/openai": "^0.3.14",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
+    "next-themes": "^0.4.4",
     "prettier-plugin-merge": "^0.7.2",
     "qs": "^6.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
