--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,6 +18,8 @@
         "name": "next"
       }
     ],
+    "allowSyntheticDefaultImports": true,
+    "types": ["next", "next/types", "next/types/global", "jest", "next-intl"],
     "paths": {
       "@/*": ["./src/*"]
     }
